<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just_Java</string>
    <!-- for the xml layout-->
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">order</string>
    <!--for the java file-->
    <string name="thank_you">Thank you !</string>
    <string name="order_summary_name">Name <xliff:g id="name" example="Kaoutar">%s</xliff:g></string>
    <string name="add_whipped_cream">Add Whipped Cream : </string>
    <string name="add_chocolate">Add Chocolate : </string>
    <string name="total">Total : </string>
    <string name="just_java_order">Just Java for </string>
    <string name="many_cups">Too many Cups of Coffee</string>
    <string name="few_cups">Too few Cups of Coffee</string>
</resources>
